--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,14 @@
-{ "presets": ["@babel/preset-env", "@babel/preset-react"] }
+{
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [
+    [
+      "file-loader",
+      {
+        "extensions": ["png", "jpg", "jpeg", "gif", "svg"],
+        "publicPath": "/dist",
+        "outputPath": "/dist/static",
+        "context": "/src"
+      }
+    ]
+  ]
+}
