--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Jo-Zh/Product-Landing-Page#readme",
   "dependencies": {
+    "babel-plugin-file-loader": "^2.0.0",
     "express": "^4.17.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -32,6 +33,7 @@
     "babel-loader": "^8.2.3",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.7.4"
